# internal/provider/apple/oas_response_encoders_gen.go
@@ -69,6 +69,19 @@ func encodeInitSessionResponse(response *InitSessionOK, w http.ResponseWriter, s
 	return nil
 }
 
+func encodeListTeamsResponse(response *TeamsResponse, w http.ResponseWriter, span trace.Span) error {
+	w.Header().Set("Content-Type", "application/json; charset=utf-8")
+	w.WriteHeader(200)
+
+	e := new(jx.Encoder)
+	response.Encode(e)
+	if _, err := e.WriteTo(w); err != nil {
+		return errors.Wrap(err, "write")
+	}
+
+	return nil
+}
+
 func encodePostSearchJobsResponse(response PostSearchJobsRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *SearchResponse:
